--- a/index.html
+++ b/index.html
@@ -4,15 +4,15 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Exchange Rate Calculator</title>
+    <title>Travis Rates Converter</title>
     
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
 
     <img src="https://i.ibb.co/rtGFcg0/pngwing-com.png" alt="" class="money-img" />
-    <h1>Exchange Rate Calculator</h1>
-    <p class="msg">Choose the currency and the amounts to get the exchange rate</p>
+    <h1>Travis Rates Converter</h1>
+    <p class="msg">Choose the currency and the amounts to get the actual exchange rate</p>
 
     <div class="container">
       <div class="currency">
@@ -70,7 +70,7 @@
           <option value="VND">VND</option>
           <option value="ZAR">ZAR</option>
         </select>
-        <input type="number" id="amount-one" placeholder="0" value="1" />
+        <input type="number" id="amount-one" placeholder="0" value="100000" />
       </div>
 
       <div class="swap-rate-container">
